T-003: Add ENEX parse upload endpoint
